--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+	<nav>
+		<li>Home</li>
+		<li>About Us</li>
+		<li>Interested Students</li>
+		<li>Board Members</li>
+		<li><a href='./project_cannon.html'>Cannon</a></li>
+		<li>hello</li>
+	</nav>
 </head>
 
 <body class="is-preload">
@@ -21,7 +30,7 @@
 	<section id="header">
 		<div class="inner">
 			<img src="images/ZOTBOTICSSPARKFINAL1.png" width="50%" height="50%">
-			<p>Zotbotics is a project based robotics club at UCI, oepn to all majors and experience levels. </br>
+			<p>Zotbotics is a project based robotics club at UCI, open to all majors and experience levels. </br>
 				We are a club dedicated to exploring the field of robotics as well as building interesting and creative
 				projects. </br> </p>
 			<ul class="actions special">
@@ -57,22 +66,23 @@
 	<section id="two" class="main style2">
 		<div class="container">
 			<div class="row gtr-150">
-				<!--<div class="col-6 col-12-medium">
-							<ul class="major-icons">
-								<li><span class="icon solid style1 major fa-code"></span></li>
-								<li><span class="icon solid style2 major fa-bolt"></span></li>
-								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
+				<div class="col-6 col-12-medium">
+					<ul class="major-icons">
+						<li><img src='./images/robot_rumble_1.JPG' width="60%" height="60%" /></li>
+						<li><img src='./images/vex_u_01.jpg' width="60%" height="60%" /></li>
+						<!--<li><span class="icon solid style3 major fa-camera-retro"></span></li>
 								<li><span class="icon solid style4 major fa-cog"></span></li>
 								<li><span class="icon solid style5 major fa-desktop"></span></li>
-								<li><span class="icon solid style6 major fa-calendar"></span></li>
-							</ul>
-						</div>-->
+								<li><span class="icon solid style6 major fa-calendar"></span></li>-->
+					</ul>
+				</div>
 				<div class="col-6 col-12-medium">
 					<header class="major">
 						<h2>Interested Students</h2>
 					</header>
 
-					<p>At any given time, there can be multiple projects where students can work on the mechanical, electric, and/or software aspects of a robotic.</p>
+					<p>At any given time, there can be multiple projects where students can work on the mechanical,
+						electric, and/or software aspects of a robotic.</p>
 
 					<p>Or...</p>
 
@@ -80,12 +90,14 @@
 
 
 					<ol>
-						<li>Submit a project proposal to the Zotbotics board. The proposal must be approved before work can officially begin.</li>
+						<li>Submit a project proposal to the Zotbotics board. The proposal must be approved before work
+							can officially begin.</li>
 						<li>
-							Proposal must include: 
+							Proposal must include:
 							<ul>
 								<li>Requirements engineering (functional, non functional)</li>
-								<li>Project team hierarchy (project manager, software lead, electrical lead, mechanical lead, etc)</li>
+								<li>Project team hierarchy (project manager, software lead, electrical lead, mechanical
+									lead, etc)</li>
 								<li>Bill of Materials</li>
 								<li>Potential Designs</li>
 								<li>Timeline to adhere to</li>
@@ -104,7 +116,7 @@
 	<section id="three" class="main style1 special">
 		<div class="container">
 			<header class="major">
-				<h2>Adipiscing amet consequat</h2>
+				<h2>Meet the Board!</h2>
 			</header>
 			<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
 			<div class="row gtr-150">
@@ -113,27 +125,27 @@
 					<h3>Magna feugiat lorem</h3>
 					<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed
 						volutpat et nascetur.</p>
-					<ul class="actions special">
+					<!--<ul class="actions special">
 						<li><a href="#" class="button">More</a></li>
-					</ul>
+					</ul>-->
 				</div>
 				<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
 					<h3>Magna feugiat lorem</h3>
 					<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed
 						volutpat et nascetur.</p>
-					<ul class="actions special">
+					<!--<ul class="actions special">
 						<li><a href="#" class="button">More</a></li>
-					</ul>
+					</ul>-->
 				</div>
 				<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 					<h3>Magna feugiat lorem</h3>
 					<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed
 						volutpat et nascetur.</p>
-					<ul class="actions special">
+					<!--<ul class="actions special">
 						<li><a href="#" class="button">More</a></li>
-					</ul>
+					</ul>-->
 				</div>
 			</div>
 		</div>
