--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
-	<nav>
-		<li>Home</li>
-		<li>About Us</li>
-		<li>Interested Students</li>
-		<li>Board Members</li>
+	<nav class = "navbar bg-light">
+		<li><a href = './index.html'>Home</a></li>
+		<li><a href = "#one" class = "scrolly">About</a> </li>
+		<li><a href = "#two" class = "scrolly">Interested Students</a></li>
+		<li><a href = "#three" class = "scrolly">Board</a></li>
+		<li><a href = "#four" class = "scrolly">Contact Us</a> </li>
 		<li><a href='./project_cannon.html'>Cannon</a></li>
-		<li>hello</li>
 	</nav>
 </head>
 
@@ -34,7 +34,7 @@
 				We are a club dedicated to exploring the field of robotics as well as building interesting and creative
 				projects. </br> </p>
 			<ul class="actions special">
-				<li><a href="#one" class="button scrolly">Discover</a></li>
+				<li><a href="#one" class="button scrolly">Learn More</a></li>
 			</ul>
 		</div>
 	</section>
