t-shirt page update

--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
 <html>
 
 <head>
-	<title>Zotbotics</title>
+	<title>Zotbotics | Home</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
-	<nav class = "navbar bg-light">
-		<li><a href = './index.html'>Home</a></li>
-		<li><a href = "#one" class = "scrolly">About</a> </li>
-		<li><a href = "#two" class = "scrolly">Interested Students</a></li>
-		<li><a href = "#three" class = "scrolly">Board</a></li>
-		<li><a href = "#four" class = "scrolly">Contact Us</a> </li>
-		<li><a href='./project_cannon.html'>Cannon</a></li>
+	<nav class="navbar bg-light" id='navbar'>
+		<li><a href='./index.html'>Home</a></li>
+		<li><a href="#one" class="scrolly">About</a> </li>
+		<li><a href="#two" class="scrolly">Interested Students</a></li>
+		<li><a href="#three" class="scrolly">Board</a></li>
+		<li><a href="#four" class="scrolly">Contact Us</a> </li>
+		<!--<li><a href='#' class="projects_dropdown">Projects <i class="fa fa-caret-down"></i></a></li>-->
+		<li><a href="./project_cannon.html">T-Shirt Cannon</a> </li>
+		<li><a href="./project_rumble.html">Robot Rumble</a> </li>
+		<li><a href = "./resources.html">Resources</a> </li>
 	</nav>
 </head>
 
@@ -157,7 +160,7 @@
 			<header class="major">
 				<h2>Looking to contact us?</h2>
 			</header>
-			<p>Please email zotbotics@gmail.com</p>
+			<p>Please email <a href = "mailto:zotbotics@gmail.com">zotbotics@gmail.com</a></p>
 			<!--<ul class="actions special">
 				<li><a href="#" class="button wide primary">Sign Up</a></li>
 				<li><a href="#" class="button wide">Learn More</a></li>
