--- a/resources.html
+++ b/resources.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-    <title>Zotbotics | T Shirt Cannon</title>
+    <title>Zotbotics | Resources</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -23,7 +23,7 @@
         <!--<li><a href='#' class="projects_dropdown">Projects <i class="fa fa-caret-down"></i></a></li>-->
         <li><a href="./project_cannon.html">T-Shirt Cannon</a> </li>
         <li><a href="./project_rumble.html">Robot Rumble</a> </li>
-        <li><a href = "./resources.html">Resources</a> </li>
+        <li><a href="./resources.html">Resources</a> </li>
     </nav>
 </head>
 
@@ -32,57 +32,17 @@
     <!-- Two -->
     <section id="two" class="main style2">
         <div class="container">
-            <div class="row gtr-150">
-                <div class="col-6 col-12-medium">
-                    <ul class="major-icons">
-                        <li><img src='./images/cannon1.png' width="60%" height="60%" /></li>
-                        <li><img src='./images/cannon2.png' width="60%" height="60%" /></li>
-                        <!--<li><span class="icon solid style3 major fa-camera-retro"></span></li>
-								<li><span class="icon solid style4 major fa-cog"></span></li>
-								<li><span class="icon solid style5 major fa-desktop"></span></li>
-								<li><span class="icon solid style6 major fa-calendar"></span></li>-->
-                    </ul>
-                </div>
-                <div class="col-6 col-12-medium">
-                    <header class="major">
-                        <h2>T-Shirt Cannon</h2>
-                    </header>
 
-                    <p>The T-shirt cannon, or ZotBuster as it was dubbed back in the day, was the first project done at
-                        Zotbotics’. This cannon was developed in summer of 2018 by many of the original board members.
-                        Much of the engineering (requirements, design decision, bill of materials) that went into this
-                        project was put together at the Courtyard Study Lounge. The actual cannon however was built in
-                        apartment 1013F at Campus Village. When the t-shirt cannon was first tested on September 20th it
-                        was able to shoot a t-shirt about 30 feet away. It was first debuted at AIF 2018 and then shown
-                        off again during the very first Zotbotics general meeting held at the ANTrepreneur Center on
-                        September 28. One of the main reasons why the club had over 200 signups during AIF 2018 as well
-                        as a huge turnout during the first Zotbotics general meeting was because of this t-shirt cannon.
-                    </p>
+            <div class="col-6 col-12-medium">
+                <header class="major">
+                    <h2>Resources</h2>
+                </header>
 
-                    <p>Project Managers:</p>
-                    <ul>
-                        <li>Inkiad Ahmed</li>
-                        <li>Spencer Kammerman</li>
-                    </ul>
+                <p>WIP</p>
+                </ol>
 
-                    <p>Software Lead: JD Loke</p>
-
-                    <p>Mechanical Lead: Austin Ho</p>
-
-                    <p>Electrical Lead: Micah Raney</p>
-
-                    <p>Project Members</p>
-                    <ul>
-                        <li>Carleton Zhao</li>
-                        <li>Jonathan Low</li>
-                        <li>Gokul Varma</li>
-                        <li>Peter Hartmeier</li>
-                        <li>Angela Li</li>
-                        <li>Jessica Li</li>
-                    </ul>
-
-                </div>
             </div>
+        </div>
         </div>
     </section>
 
