--- a/project_rumble.html
+++ b/project_rumble.html
@@ -16,27 +16,27 @@
 
 	<nav class="navbar bg-light" id='navbar'>
 		<li><a href='./index.html'>Home</a></li>
-		<li><a href="#one" class="scrolly">About</a> </li>
-		<li><a href="#two" class="scrolly">Interested Students</a></li>
-		<li><a href="#three" class="scrolly">Board</a></li>
-		<li><a href="#four" class="scrolly">Contact Us</a> </li>
+		<li><a href="./index.html#one" class="scrolly">About</a> </li>
+		<li><a href="./index.html#two" class="scrolly">Interested Students</a></li>
+		<!--<li><a href="#three" class="scrolly">Board</a></li>-->
+		<li><a href="./index.html#four" class="scrolly">Contact Us</a> </li>
 		<!--<li><a href='#' class="projects_dropdown">Projects <i class="fa fa-caret-down"></i></a></li>-->
 		<li><a href="./project_cannon.html">T-Shirt Cannon</a> </li>
-        <li><a href="./project_rumble.html">Robot Rumble</a> </li>
-        <li><a href = "./resources.html">Resources</a> </li>
+		<li><a href="./project_rumble.html">Robot Rumble</a> </li>
+		<li><a href="./resources.html">Resources</a> </li>
 	</nav>
 </head>
 
 <body class="is-preload">
 
 	<!-- Two -->
-	<section id="two" class="main style2">
+	<section id="rumble" class="main style2">
 		<div class="container">
 			<div class="row gtr-150">
 				<div class="col-6 col-12-medium">
 					<ul class="major-icons">
-						<li><img src='./images/robot_rumble_1.JPG' width="60%" height="60%" /></li>
-						<li><img src='./images/vex_u_01.jpg' width="60%" height="60%" /></li>
+						<li><img src='./images/robot_rumble_2.JPG' width="60%" height="60%" /></li>
+						<li><img src='./images/robot_rumble_3.png' width="60%" height="60%" /></li>
 						<!--<li><span class="icon solid style3 major fa-camera-retro"></span></li>
 								<li><span class="icon solid style4 major fa-cog"></span></li>
 								<li><span class="icon solid style5 major fa-desktop"></span></li>
@@ -48,7 +48,19 @@
 						<h2>Robot Rumble</h2>
 					</header>
 
-					<p>WIP</p>
+					<p>Robot Rumble was an exciting Zotbotics program in which teams came together to build fighting
+						robots and duel each other for tournament victory! Teams first designed their idealized fighting
+						robot to fit our size, weight, and safety requirements. Then, each team started with either a
+						starter kit of parts or purchased their own parts to build their robot. From there, Zotbotics
+						gave tutorials on mechanical design, electrical design, and programming so that teams could get
+						started building. Zotbotics offered support to teams during general meetings, where the board
+						would answer questions and give help on request. Teams worked at their own pace to finish their
+						robots over the course of a quarter. The final tournament with all the completed robots took
+						place on Week 10 of the quarter, right before finals, so as to offer a little entertainment and
+						morale boost going into exams. Robots fought sumo-style, pushing each other out of the ring or
+						disabling the other in order to win. The winners of the epic tournaments go on to be
+						immortalized in Zotbotics legends!
+					</p>
 					</ol>
 
 				</div>
