--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<li><a href='./index.html'>Home</a></li>
 		<li><a href="#one" class="scrolly">About</a> </li>
 		<li><a href="#two" class="scrolly">Interested Students</a></li>
-		<li><a href="#three" class="scrolly">Board</a></li>
+		<!--<li><a href="#three" class="scrolly">Board</a></li>-->
 		<li><a href="#four" class="scrolly">Contact Us</a> </li>
 		<!--<li><a href='#' class="projects_dropdown">Projects <i class="fa fa-caret-down"></i></a></li>-->
 		<li><a href="./project_cannon.html">T-Shirt Cannon</a> </li>
@@ -116,46 +116,10 @@
 	</section>
 
 	<!-- Three -->
-	<section id="three" class="main style1 special">
-		<div class="container">
-			<header class="major">
-				<h2>Meet the Board!</h2>
-			</header>
-			<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
-			<div class="row gtr-150">
-				<div class="col-4 col-12-medium">
-					<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-					<h3>Magna feugiat lorem</h3>
-					<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed
-						volutpat et nascetur.</p>
-					<!--<ul class="actions special">
-						<li><a href="#" class="button">More</a></li>
-					</ul>-->
-				</div>
-				<div class="col-4 col-12-medium">
-					<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-					<h3>Magna feugiat lorem</h3>
-					<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed
-						volutpat et nascetur.</p>
-					<!--<ul class="actions special">
-						<li><a href="#" class="button">More</a></li>
-					</ul>-->
-				</div>
-				<div class="col-4 col-12-medium">
-					<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-					<h3>Magna feugiat lorem</h3>
-					<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed
-						volutpat et nascetur.</p>
-					<!--<ul class="actions special">
-						<li><a href="#" class="button">More</a></li>
-					</ul>-->
-				</div>
-			</div>
-		</div>
-	</section>
+	
 
 	<!-- Four -->
-	<section id="four" class="main style2 special">
+	<section id="four" class="main style1 special">
 		<div class="container">
 			<header class="major">
 				<h2>Looking to contact us?</h2>
