--- a/project_cannon.html
+++ b/project_cannon.html
@@ -14,23 +14,23 @@
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
-    <nav class="navbar bg-light" id='navbar'>
-        <li><a href='./index.html'>Home</a></li>
-        <li><a href="#one" class="scrolly">About</a> </li>
-        <li><a href="#two" class="scrolly">Interested Students</a></li>
-        <li><a href="#three" class="scrolly">Board</a></li>
-        <li><a href="#four" class="scrolly">Contact Us</a> </li>
-        <!--<li><a href='#' class="projects_dropdown">Projects <i class="fa fa-caret-down"></i></a></li>-->
-        <li><a href="./project_cannon.html">T-Shirt Cannon</a> </li>
-        <li><a href="./project_rumble.html">Robot Rumble</a> </li>
-        <li><a href = "./resources.html">Resources</a> </li>
-    </nav>
+		<nav class="navbar bg-light" id='navbar'>
+			<li><a href='./index.html'>Home</a></li>
+			<li><a href="./index.html#one" class="scrolly">About</a> </li>
+			<li><a href="./index.html#two" class="scrolly">Interested Students</a></li>
+			<!--<li><a href="#three" class="scrolly">Board</a></li>-->
+			<li><a href="./index.html#four" class="scrolly">Contact Us</a> </li>
+			<!--<li><a href='#' class="projects_dropdown">Projects <i class="fa fa-caret-down"></i></a></li>-->
+			<li><a href="./project_cannon.html">T-Shirt Cannon</a> </li>
+			<li><a href="./project_rumble.html">Robot Rumble</a> </li>
+			<li><a href="./resources.html">Resources</a> </li>
+		</nav>
 </head>
 
 <body class="is-preload">
 
     <!-- Two -->
-    <section id="two" class="main style2">
+    <section id="cannon" class="main style2">
         <div class="container">
             <div class="row gtr-150">
                 <div class="col-6 col-12-medium">
