--- a/resources.html
+++ b/resources.html
@@ -14,23 +14,23 @@
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
-    <nav class="navbar bg-light" id='navbar'>
-        <li><a href='./index.html'>Home</a></li>
-        <li><a href="#one" class="scrolly">About</a> </li>
-        <li><a href="#two" class="scrolly">Interested Students</a></li>
-        <li><a href="#three" class="scrolly">Board</a></li>
-        <li><a href="#four" class="scrolly">Contact Us</a> </li>
-        <!--<li><a href='#' class="projects_dropdown">Projects <i class="fa fa-caret-down"></i></a></li>-->
-        <li><a href="./project_cannon.html">T-Shirt Cannon</a> </li>
-        <li><a href="./project_rumble.html">Robot Rumble</a> </li>
-        <li><a href="./resources.html">Resources</a> </li>
-    </nav>
+		<nav class="navbar bg-light" id='navbar'>
+			<li><a href='./index.html'>Home</a></li>
+			<li><a href="./index.html#one" class="scrolly">About</a> </li>
+			<li><a href="./index.html#two" class="scrolly">Interested Students</a></li>
+			<!--<li><a href="#three" class="scrolly">Board</a></li>-->
+			<li><a href="./index.html#four" class="scrolly">Contact Us</a> </li>
+			<!--<li><a href='#' class="projects_dropdown">Projects <i class="fa fa-caret-down"></i></a></li>-->
+			<li><a href="./project_cannon.html">T-Shirt Cannon</a> </li>
+			<li><a href="./project_rumble.html">Robot Rumble</a> </li>
+			<li><a href="./resources.html">Resources</a> </li>
+		</nav>
 </head>
 
 <body class="is-preload">
 
     <!-- Two -->
-    <section id="two" class="main style2">
+    <section id="resources" class="main style2">
         <div class="container">
 
             <div class="col-6 col-12-medium">
@@ -38,8 +38,79 @@
                     <h2>Resources</h2>
                 </header>
 
-                <p>WIP</p>
-                </ol>
+                <ul>
+					<li><a href = "https://www.youtube.com/playlist?list=PLAXJqmuqGEr706zgRtnwgQiFC5FYLvaTr">Introduction to Mechanical Design</a></li>
+					<li><a href = "https://www.ros.org/">The Robot Oberating System Library</a>
+						<ul>
+							<li>Useful for more advanced robots</li>
+							<li>Pub sub architecture</li>
+							<li>Request architecture</li>
+							<li>Data visualization</li>
+							<li>Has a package manager that has a ton of other software that is useful to robotics</li>
+							<li>Works with OpenCV</li>
+						</ul>
+					</li>
+					<li><a href = "https://opencv.org/about/" >OpenCV, an open sourced computer vision library</a></li>
+					<li><a href = "https://www.cyberbotics.com/">Webots</a>
+						<ul>
+							<li>General Robotics Simulator</li>
+							<li>A free and open source 3D robot simulator commonly used in industry, education, and research</li>
+						</ul>
+					</li>
+					<li><a href = "https://ocw.mit.edu/courses/mechanical-engineering/2-12-introduction-to-robotics-fall-2005/lecture-notes/">MIT Opencourseware Introduction to Robotics</a></li>
+					<li><a href = "https://www.tinkercad.com/learn/circuits">Tinkercad</a></li>
+				</ul>
+
+				<h4>Dev Boards</h4>
+
+				<ul>
+					<li><a href = "https://developer.nvidia.com/buy-jetson">Nvidia Jetson</a></li>
+					<li><a href = "https://developer.qualcomm.com/hardware/dragonboard-410c">Dragonboard 410c</a></li>
+					<li><a href = "https://www.arduino.cc/">Arduino</a></li>
+					<li><a href = "https://www.raspberrypi.org/">Raspberry Pi</a></li>
+
+				</ul>
+
+				<h4>Professors at UCI with Interests in Robotics</h4>
+
+				<ul>
+					<li>Professor Roy Fox - Intelligent Dynamics Labs
+						<ul>
+							<li>Reinforcment learning with robotics</li>
+						</ul>
+					</li>
+
+					<li>Professor Jeffery Krichmar - Cognitive Anteater Robotics Lab
+						<ul>
+							<li>Cognitive Science with robotics</li>
+							<li>Machine Learning</li>
+							<li>Robotics in general</li>
+						</ul>
+					</li>
+
+					<li>David Reinkensmeyer - Biorobotics Lab
+						<ul>
+							<li>Mechanical Design</li>
+							<li>Robotics in general</li>
+						</ul>
+					</li>
+
+					<li>Professor Zak M Kassas - ASPIN Lab
+						<ul>
+							<li>Sensors</li>
+							<li>Autonomous systems</li>
+						</ul>
+					</li>
+
+					<li>Professor Charles Fowlkes - Computer Vision Lab
+						<ul>
+							<li>Computer Vision</li>
+						</ul>
+					</li>
+
+
+
+				</ul>
 
             </div>
         </div>
