navbar update: add icons and get rid of text-decoration

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 
 <head>
+	<link rel="icon" href="images/Zotbotics Sponsorship.png" />
 	<title>Zotbotics | Home</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -14,20 +15,26 @@
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
-	<nav class="navbar bg-light" id='navbar'>
-		<li><a href='./index.html'>Home</a></li>
-		<li><a href="#one" class="scrolly">About</a> </li>
-		<li><a href="#two" class="scrolly">Interested Students</a></li>
-		<!--<li><a href="#three" class="scrolly">Board</a></li>-->
-		<li><a href="#four" class="scrolly">Contact Us</a> </li>
-		<!--<li><a href='#' class="projects_dropdown">Projects <i class="fa fa-caret-down"></i></a></li>-->
-		<li><a href="./project_cannon.html">T-Shirt Cannon</a> </li>
-		<li><a href="./project_rumble.html">Robot Rumble</a> </li>
-		<li><a href = "./resources.html">Resources</a> </li>
-	</nav>
+	<div class="logo">
+		<img src="images/Zotbotics Sponsorship1.png" height="7.5%" />
+	</div>
 </head>
 
 <body class="is-preload">
+
+	<header class = "navbar">
+		<nav class="navbar bg-light">
+			<li><a href='./index.html'>Home</a></li>
+			<li><a href="#one" class="scrolly">About</a> </li>
+			<li><a href="#two" class="scrolly">Interested Students</a></li>
+			<!--<li><a href="#three" class="scrolly">Board</a></li>-->
+			<li><a href="#four" class="scrolly">Contact Us</a> </li>
+			<!--<li><a href='#' class="projects_dropdown">Projects <i class="fa fa-caret-down"></i></a></li>-->
+			<li><a href="./project_cannon.html">T-Shirt Cannon</a> </li>
+			<li><a href="./project_rumble.html">Robot Rumble</a> </li>
+			<li><a href="./resources.html">Resources</a> </li>
+		</nav>
+	</header>
 
 	<!-- Header -->
 	<section id="header">
@@ -116,7 +123,7 @@
 	</section>
 
 	<!-- Three -->
-	
+
 
 	<!-- Four -->
 	<section id="four" class="main style1 special">
@@ -124,7 +131,7 @@
 			<header class="major">
 				<h2>Looking to contact us?</h2>
 			</header>
-			<p>Please email <a href = "mailto:zotbotics@gmail.com">zotbotics@gmail.com</a></p>
+			<p>Please email <a href="mailto:zotbotics@gmail.com">zotbotics@gmail.com</a></p>
 			<!--<ul class="actions special">
 				<li><a href="#" class="button wide primary">Sign Up</a></li>
 				<li><a href="#" class="button wide">Learn More</a></li>
