updated interested students for fall-winter 2020

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body class="is-preload">
 
-	<header class = "navbar">
+	<header class="navbar">
 		<nav class="navbar bg-light">
 			<li><a href='./index.html'>Home</a></li>
 			<li><a href="#one" class="scrolly">About</a> </li>
@@ -91,31 +91,19 @@
 						<h2>Interested Students</h2>
 					</header>
 
-					<p>At any given time, there can be multiple projects where students can work on the mechanical,
-						electric, and/or software aspects of a robotic.</p>
+					<p>For the Fall 2020 quarter, Zotbotics will be hosting workshops regarding robotics. Each workshop
+						will consist of informational slides/videos demonstrating how a certain part is integral to
+						robotics and how it works. For workshops more focused on software, we will also share Google
+						Colabs where people can interact with the source code. </p>
 
-					<p>Or...</p>
+					<p>For the Winter 2021 quarter, Zotbotics members will be able to build their own fully functional
+						robot that will be adaptable for future modifications. Teams will begin with a starter kit of
+						parts and will be able to follow tutorials created by Zotbotics for any programming, electrical
+						designs, and mechanical designs necessary for the robot’s basic functions. From there, more
+						advanced addons can be built into the robot, making the kit flexible and great for those getting
+						into robotics, as well as those already with some experience.</p>
 
-					<p>If you're looking to start a project yourself, here's the steps on how to do so: </p>
 
-
-					<ol>
-						<li>Submit a project proposal to the Zotbotics board. The proposal must be approved before work
-							can officially begin.</li>
-						<li>
-							Proposal must include:
-							<ul>
-								<li>Requirements engineering (functional, non functional)</li>
-								<li>Project team hierarchy (project manager, software lead, electrical lead, mechanical
-									lead, etc)</li>
-								<li>Bill of Materials</li>
-								<li>Potential Designs</li>
-								<li>Timeline to adhere to</li>
-								<li>Documents needed for funding</li>
-							</ul>
-						</li>
-						<li>Recruit members both new and experienced</li>
-					</ol>
 
 				</div>
 			</div>
