interest form added

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 						advanced addons can be built into the robot, making the kit flexible and great for those getting
 						into robotics, as well as those already with some experience.</p>
 
+					<h4>Interested? Please fill out this <a href = "http:/bit.ly/zotbotics" id = "link">form</a> <h4p>
 
 
 				</div>
