--- a/index.html
+++ b/index.html
@@ -449,11 +449,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	<!-- Footer -->
 	<section id="footer">
 		<ul class="icons">
-			<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-			<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-			<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-			<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-			<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+			<li><a href="https://www.facebook.com/zotbotics" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+			<li><a href="https://www.instagram.com/zotboticsatuci/?hl=en" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+			<li><a href="https://github.com/Zotbotics" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 		</ul>
 		<ul class="copyright">
 			<li>&copy; Zotbotics</li>
