added logos to other pages

--- a/project_cannon.html
+++ b/project_cannon.html
@@ -7,13 +7,24 @@
 <html>
 
 <head>
-    <title>Zotbotics | T Shirt Cannon</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript>
-        <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<link rel="icon" href="images/Zotbotics Sponsorship.png" />
+	<title>Zotbotics | T Shirt Cannon</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
+	<div class="logo">
+		<img src="images/Zotbotics Sponsorship1.png" height="8%" />
+	</div>
+
+
+</head>
+
+<body class="is-preload">
+
+	<header>
 		<nav class="navbar bg-light" id='navbar'>
 			<li><a href='./index.html'>Home</a></li>
 			<li><a href="./index.html#one" class="scrolly">About</a> </li>
@@ -25,69 +36,67 @@
 			<li><a href="./project_rumble.html">Robot Rumble</a> </li>
 			<li><a href="./resources.html">Resources</a> </li>
 		</nav>
-</head>
+	</header>
 
-<body class="is-preload">
-
-    <!-- Two -->
-    <section id="cannon" class="main style2">
-        <div class="container">
-            <div class="row gtr-150">
-                <div class="col-6 col-12-medium">
-                    <ul class="major-icons">
-                        <li><img src='./images/cannon1.png' width="60%" height="60%" /></li>
-                        <li><img src='./images/cannon2.png' width="60%" height="60%" /></li>
-                        <!--<li><span class="icon solid style3 major fa-camera-retro"></span></li>
+	<!-- Two -->
+	<section id="cannon" class="main style2">
+		<div class="container">
+			<div class="row gtr-150">
+				<div class="col-6 col-12-medium">
+					<ul class="major-icons">
+						<li><img src='./images/cannon1.png' width="60%" height="60%" /></li>
+						<li><img src='./images/cannon2.png' width="60%" height="60%" /></li>
+						<!--<li><span class="icon solid style3 major fa-camera-retro"></span></li>
 								<li><span class="icon solid style4 major fa-cog"></span></li>
 								<li><span class="icon solid style5 major fa-desktop"></span></li>
 								<li><span class="icon solid style6 major fa-calendar"></span></li>-->
-                    </ul>
-                </div>
-                <div class="col-6 col-12-medium">
-                    <header class="major">
-                        <h2>T-Shirt Cannon</h2>
-                    </header>
+					</ul>
+				</div>
+				<div class="col-6 col-12-medium">
+					<header class="major">
+						<h2>T-Shirt Cannon</h2>
+					</header>
 
-                    <p>The T-shirt cannon, or ZotBuster as it was dubbed back in the day, was the first project done at
-                        Zotbotics’. This cannon was developed in summer of 2018 by many of the original board members.
-                        Much of the engineering (requirements, design decision, bill of materials) that went into this
-                        project was put together at the Courtyard Study Lounge. The actual cannon however was built in
-                        apartment 1013F at Campus Village. When the t-shirt cannon was first tested on September 20th it
-                        was able to shoot a t-shirt about 30 feet away. It was first debuted at AIF 2018 and then shown
-                        off again during the very first Zotbotics general meeting held at the ANTrepreneur Center on
-                        September 28. One of the main reasons why the club had over 200 signups during AIF 2018 as well
-                        as a huge turnout during the first Zotbotics general meeting was because of this t-shirt cannon.
-                    </p>
+					<p>The T-shirt cannon, or ZotBuster as it was dubbed back in the day, was the first project done at
+						Zotbotics’. This cannon was developed in summer of 2018 by many of the original board members.
+						Much of the engineering (requirements, design decision, bill of materials) that went into this
+						project was put together at the Courtyard Study Lounge. The actual cannon however was built in
+						apartment 1013F at Campus Village. When the t-shirt cannon was first tested on September 20th it
+						was able to shoot a t-shirt about 30 feet away. It was first debuted at AIF 2018 and then shown
+						off again during the very first Zotbotics general meeting held at the ANTrepreneur Center on
+						September 28. One of the main reasons why the club had over 200 signups during AIF 2018 as well
+						as a huge turnout during the first Zotbotics general meeting was because of this t-shirt cannon.
+					</p>
 
-                    <p>Project Managers:</p>
-                    <ul>
-                        <li>Inkiad Ahmed</li>
-                        <li>Spencer Kammerman</li>
-                    </ul>
+					<p>Project Managers:</p>
+					<ul>
+						<li>Inkiad Ahmed</li>
+						<li>Spencer Kammerman</li>
+					</ul>
 
-                    <p>Software Lead: JD Loke</p>
+					<p>Software Lead: JD Loke</p>
 
-                    <p>Mechanical Lead: Austin Ho</p>
+					<p>Mechanical Lead: Austin Ho</p>
 
-                    <p>Electrical Lead: Micah Raney</p>
+					<p>Electrical Lead: Micah Raney</p>
 
-                    <p>Project Members</p>
-                    <ul>
-                        <li>Carleton Zhao</li>
-                        <li>Jonathan Low</li>
-                        <li>Gokul Varma</li>
-                        <li>Peter Hartmeier</li>
-                        <li>Angela Li</li>
-                        <li>Jessica Li</li>
-                    </ul>
+					<p>Project Members</p>
+					<ul>
+						<li>Carleton Zhao</li>
+						<li>Jonathan Low</li>
+						<li>Gokul Varma</li>
+						<li>Peter Hartmeier</li>
+						<li>Angela Li</li>
+						<li>Jessica Li</li>
+					</ul>
 
-                </div>
-            </div>
-        </div>
-    </section>
+				</div>
+			</div>
+		</div>
+	</section>
 
-    <!-- Five -->
-    <!--
+	<!-- Five -->
+	<!--
 			<section id="five" class="main style1">
 				<div class="container">
 					<header class="major special">
@@ -404,28 +413,28 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</section>
 		-->
 
-    <!-- Footer -->
-    <section id="footer">
-        <ul class="icons">
-            <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-            <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-            <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-            <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-            <li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-        </ul>
-        <ul class="copyright">
-            <li>&copy; Zotbotics</li>
-            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-        </ul>
-    </section>
+	<!-- Footer -->
+	<section id="footer">
+		<ul class="icons">
+			<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+			<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+			<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+			<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+			<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+		</ul>
+		<ul class="copyright">
+			<li>&copy; Zotbotics</li>
+			<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+		</ul>
+	</section>
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
 </body>
 
