--- a/project_rumble.html
+++ b/project_rumble.html
@@ -7,6 +7,8 @@
 <html>
 
 <head>
+	<link rel="icon" href="images/Zotbotics Sponsorship.png" />
+
 	<title>Zotbotics | Robot Rumble</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -14,20 +16,29 @@
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
-	<nav class="navbar bg-light" id='navbar'>
-		<li><a href='./index.html'>Home</a></li>
-		<li><a href="./index.html#one" class="scrolly">About</a> </li>
-		<li><a href="./index.html#two" class="scrolly">Interested Students</a></li>
-		<!--<li><a href="#three" class="scrolly">Board</a></li>-->
-		<li><a href="./index.html#four" class="scrolly">Contact Us</a> </li>
-		<!--<li><a href='#' class="projects_dropdown">Projects <i class="fa fa-caret-down"></i></a></li>-->
-		<li><a href="./project_cannon.html">T-Shirt Cannon</a> </li>
-		<li><a href="./project_rumble.html">Robot Rumble</a> </li>
-		<li><a href="./resources.html">Resources</a> </li>
-	</nav>
+	<div class="logo">
+		<img src="images/Zotbotics Sponsorship1.png" height="8%" />
+	</div>
+
 </head>
 
 <body class="is-preload">
+
+	<header>
+		<nav class="navbar bg-light" id='navbar'>
+			<li><a href='./index.html'>Home</a></li>
+			<li><a href="./index.html#one" class="scrolly">About</a> </li>
+			<li><a href="./index.html#two" class="scrolly">Interested Students</a></li>
+			<!--<li><a href="#three" class="scrolly">Board</a></li>-->
+			<li><a href="./index.html#four" class="scrolly">Contact Us</a> </li>
+			<!--<li><a href='#' class="projects_dropdown">Projects <i class="fa fa-caret-down"></i></a></li>-->
+			<li><a href="./project_cannon.html">T-Shirt Cannon</a> </li>
+			<li><a href="./project_rumble.html">Robot Rumble</a> </li>
+			<li><a href="./resources.html">Resources</a> </li>
+		</nav>
+
+
+	</header>
 
 	<!-- Two -->
 	<section id="rumble" class="main style2">
