--- a/resources.html
+++ b/resources.html
@@ -7,13 +7,23 @@
 <html>
 
 <head>
-    <title>Zotbotics | Resources</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript>
-        <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<link rel="icon" href="images/Zotbotics Sponsorship.png" />
 
+	<title>Zotbotics | Resources</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<div class="logo">
+		<img src="images/Zotbotics Sponsorship1.png" height="8%" />
+	</div>
+
+</head>
+
+<body class="is-preload">
+
+	<head>
 		<nav class="navbar bg-light" id='navbar'>
 			<li><a href='./index.html'>Home</a></li>
 			<li><a href="./index.html#one" class="scrolly">About</a> </li>
@@ -25,22 +35,21 @@
 			<li><a href="./project_rumble.html">Robot Rumble</a> </li>
 			<li><a href="./resources.html">Resources</a> </li>
 		</nav>
-</head>
+	</head>
 
-<body class="is-preload">
+	<!-- Two -->
+	<section id="resources" class="main style2">
+		<div class="container">
 
-    <!-- Two -->
-    <section id="resources" class="main style2">
-        <div class="container">
+			<div class="col-6 col-12-medium">
+				<header class="major">
+					<h2>Resources</h2>
+				</header>
 
-            <div class="col-6 col-12-medium">
-                <header class="major">
-                    <h2>Resources</h2>
-                </header>
-
-                <ul>
-					<li><a href = "https://www.youtube.com/playlist?list=PLAXJqmuqGEr706zgRtnwgQiFC5FYLvaTr">Introduction to Mechanical Design</a></li>
-					<li><a href = "https://www.ros.org/">The Robot Oberating System Library</a>
+				<ul>
+					<li><a href="https://www.youtube.com/playlist?list=PLAXJqmuqGEr706zgRtnwgQiFC5FYLvaTr">Introduction
+							to Mechanical Design</a></li>
+					<li><a href="https://www.ros.org/">The Robot Oberating System Library</a>
 						<ul>
 							<li>Useful for more advanced robots</li>
 							<li>Pub sub architecture</li>
@@ -50,24 +59,27 @@
 							<li>Works with OpenCV</li>
 						</ul>
 					</li>
-					<li><a href = "https://opencv.org/about/" >OpenCV, an open sourced computer vision library</a></li>
-					<li><a href = "https://www.cyberbotics.com/">Webots</a>
+					<li><a href="https://opencv.org/about/">OpenCV, an open sourced computer vision library</a></li>
+					<li><a href="https://www.cyberbotics.com/">Webots</a>
 						<ul>
 							<li>General Robotics Simulator</li>
-							<li>A free and open source 3D robot simulator commonly used in industry, education, and research</li>
+							<li>A free and open source 3D robot simulator commonly used in industry, education, and
+								research</li>
 						</ul>
 					</li>
-					<li><a href = "https://ocw.mit.edu/courses/mechanical-engineering/2-12-introduction-to-robotics-fall-2005/lecture-notes/">MIT Opencourseware Introduction to Robotics</a></li>
-					<li><a href = "https://www.tinkercad.com/learn/circuits">Tinkercad</a></li>
+					<li><a
+							href="https://ocw.mit.edu/courses/mechanical-engineering/2-12-introduction-to-robotics-fall-2005/lecture-notes/">MIT
+							Opencourseware Introduction to Robotics</a></li>
+					<li><a href="https://www.tinkercad.com/learn/circuits">Tinkercad</a></li>
 				</ul>
 
 				<h4>Dev Boards</h4>
 
 				<ul>
-					<li><a href = "https://developer.nvidia.com/buy-jetson">Nvidia Jetson</a></li>
-					<li><a href = "https://developer.qualcomm.com/hardware/dragonboard-410c">Dragonboard 410c</a></li>
-					<li><a href = "https://www.arduino.cc/">Arduino</a></li>
-					<li><a href = "https://www.raspberrypi.org/">Raspberry Pi</a></li>
+					<li><a href="https://developer.nvidia.com/buy-jetson">Nvidia Jetson</a></li>
+					<li><a href="https://developer.qualcomm.com/hardware/dragonboard-410c">Dragonboard 410c</a></li>
+					<li><a href="https://www.arduino.cc/">Arduino</a></li>
+					<li><a href="https://www.raspberrypi.org/">Raspberry Pi</a></li>
 
 				</ul>
 
@@ -112,13 +124,13 @@
 
 				</ul>
 
-            </div>
-        </div>
-        </div>
-    </section>
+			</div>
+		</div>
+		</div>
+	</section>
 
-    <!-- Five -->
-    <!--
+	<!-- Five -->
+	<!--
 			<section id="five" class="main style1">
 				<div class="container">
 					<header class="major special">
@@ -435,28 +447,28 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</section>
 		-->
 
-    <!-- Footer -->
-    <section id="footer">
-        <ul class="icons">
-            <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-            <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-            <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-            <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-            <li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-        </ul>
-        <ul class="copyright">
-            <li>&copy; Zotbotics</li>
-            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-        </ul>
-    </section>
+	<!-- Footer -->
+	<section id="footer">
+		<ul class="icons">
+			<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+			<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+			<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+			<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+			<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+		</ul>
+		<ul class="copyright">
+			<li>&copy; Zotbotics</li>
+			<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+		</ul>
+	</section>
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
 </body>
 
